# aiogarmin

./: .gitignore  Makefile  README.md  pyproject.toml  test_fetch_data.py
.github/workflows/: publish.yml
src/aiogarmin/: __init__.py  auth.py  client.py  const.py  models.py
tests/: __init__.py  conftest.py  test_auth.py  test_client.py  test_fit.py  test_services.py
